crates/fwob/tests/ui/derive/missing_key.rs
use fwob_core::FwobFrame;

#[derive(FwobFrame)]
struct MissingKey {
    value: i32,
}

fn main() {}
